--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   </header>
 
- <main class="container mt-5" >
+ <main class="container mt-5"-center">
 
   <div class="row">
       <div class="col-md-4">
@@ -30,7 +30,7 @@
             <div class="card-body">
                
               <p class="card-text">
-                
+
 <p> nome do usuário</p>
 <p>senha</p>
 <p>entrar</p>
