--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
 
 
   </header>
-
- <main class="container mt-5"-center">
-
+ <main class="container mt-5">
+<div class="text-center">
   <div class="row">
       <div class="col-md-4">
         <div class="card">
@@ -35,7 +34,7 @@
 <p>senha</p>
 <p>entrar</p>
 
-          
+              </div>
           </div>
         </div>
      </div>
