--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
   </header>
- <main class="container mt-5">
+ <main class="container mt-5-center">
 <div class="text-center">
   <div class="row">
       <div class="col-md-4">
@@ -33,8 +33,7 @@
 <p> nome do usuário</p>
 <p>senha</p>
 <p>entrar</p>
-
-              </div>
+               </div>
           </div>
         </div>
      </div>
