--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
 
 
   </header>
- <main class="container mt-5-center">
-<div class="text-center">
+ <main class="container mt-5">
+  
+<div class="container mt-5-center">
+  <div class="text-center">
   <div class="row">
       <div class="col-md-4">
         <div class="card">
@@ -33,6 +35,8 @@
 <p> nome do usuário</p>
 <p>senha</p>
 <p>entrar</p>
+
+</div>
                </div>
           </div>
         </div>
