--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 
   </header>
  <main class="container mt-5">
-  
+
 <div class="container mt-5-center">
   <div class="text-center">
   <div class="row">
-      <div class="col-md-4">
+      <div class="col-md-4-center">
         <div class="card">
          
             <div class="card-body">
