--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
   <header class="cabecalho">
-    <h1>Iplants</h1>
+    <img src="./img/Frame 1.png" alt="" class="cabecalho-img">
     
 
 
