--- a/index.html
+++ b/index.html
@@ -17,8 +17,20 @@
 
   <header class="cabecalho">
     <img src="./img/Frame 1.png" alt="" class="cabecalho-img">
-    di
+
+    <div class="pesquisaloc">
+<img src="./img/Google Maps.png" alt="" class="maps">
+<img src="./img/Search.png" alt="" class="lupa">
+
+    </div>
+
+    
+
+
  </header>
+
+
+
 </body>
 </html>
 
