--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <img src="./img/Frame 1.png" alt="" class="cabecalho-img">
 
     <div class="pesquisaloc">
-<img src="./img/Google Maps.png" alt="" class="maps">
+<img src="./img/Google Maps.png" alt="" class="maps"><br>
 <img src="./img/Search.png" alt="" class="lupa">
 
     </div>
