--- a/index.html
+++ b/index.html
@@ -19,10 +19,14 @@
     <img src="./img/Frame 1.png" alt="" class="cabecalho-img">
 
     <div class="pesquisaloc">
-<img src="./img/Google Maps.png" alt="" class="maps"><br>
-<img src="./img/Search.png" alt="" class="lupa">
 
+<img src="./img/🦆 icon _Person_.png" alt="" class="usuario">
+<img src="./img/Notification.png" alt="" class="sino">
+      <img src="./img/Search.png" alt="" class="lupa">
+<img src="./img/Google Maps.png" alt="" class="maps">
     </div>
+
+
 
     
 
