--- a/index.html
+++ b/index.html
@@ -21,10 +21,15 @@
 
 
 
-    <div class="pesquisaloc">
+    <div class="usariosino">
 
 <img src="./img/🦆 icon _Person_.png" alt="" class="usuario">
 <img src="./img/Notification.png" alt="" class="sino">
+
+    </div>
+
+    
+    <div class="pesquisaloc">
       <img src="./img/Search.png" alt="" class="lupa">
 <img src="./img/Google Maps.png" alt="" class="maps">
     </div>
