--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div class="bloco">
 
 
-    <div class="usariosino">
+    <div class="usuariosino">
 
 <img src="./img/🦆 icon _Person_.png" alt="" class="usuario">
 <img src="./img/Notification.png" alt="" class="sino">
