--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
 
     
     <div class="pesquisaloc">
-      <img src="./img/Search.png" alt="" class="lupa">
+      <label for=""><img src="./img/Search.png" alt="" class="lupa">
+      </label>
+      <input type="text">
 <img src="./img/Google Maps.png" alt="" class="maps">
     </div>
 
