--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
       <label for=""><img src="./img/Search.png" alt="" class="lupa">
       </label>
       <input type="text">
-<img src="./img/Google Maps.png" alt="" class="maps">
+<label for=""><img src="./img/Google Maps.png" alt="" class="maps">
+</label>
     </div>
 
 
