--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     <img src="./img/Frame 1.png" alt="" class="cabecalho-img">
 </header>
 
+<div class="incio">
+    <img src="./img/textura-de-folha-verde-fundo-de-textura-de-folha.jpg" alt="folhas">
+</div>
+
 
 <div class="bloco">
 
