--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <img src="./img/Frame 1.png" alt="" class="cabecalho-img">
 </header>
 
-<div class="incio">
+<div class="inicio">
     <img src="./img/textura-de-folha-verde-fundo-de-textura-de-folha.jpg" alt="folhas">
 </div>
 
