--- a/index.html
+++ b/index.html
@@ -38,9 +38,12 @@
 
 
         <div class="pesquisaloc">
-            <label for=""><img src="./img/Search.png" alt="" class="lupa">
-            </label>
-            <input type="text">
+            <div class="pesquisa">
+
+                <label for=""><img src="./img/Search.png" alt="" class="lupa">
+                </label>
+                <input type="text">
+            </div>
 
             <label for=""><img src="./img/Google Maps.png" alt="" class="maps">
             </label>
