--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <div class="usuariosino">
 
-            <img src="./img/🦆 icon _Person_.png" alt="" class="usuario">
+            <img src="./img/Group 1.png" alt="" class="usuario">
             <img src="./img/Notification.png" alt="" class="sino">
 
         </div>
