--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="usuariosino">
 
             <img src="./img/Group 1.png" alt="" class="usuario">
-            <img src="./img/Notification.png" alt="" class="sino">
+            <img src="./img/Group 3.png" alt="" class="sino">
 
         </div>
 
