--- a/index.html
+++ b/index.html
@@ -45,11 +45,13 @@
                 <input type="text">
             </div>
 
+            <div class="loc">
+
             <label for=""><img src="./img/Google Maps.png" alt="" class="maps">
             </label>
             <input type="text">
         </div>
-
+</div>
 
     </div>
 
