--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
 
                 <label for=""><img src="./img/Search.png" alt="" class="lupa">
                 </label>
-                <input type="text">
+                <input type="text" class="text1">
             </div>
 
             <div class="loc">
 
             <label for=""><img src="./img/Google Maps.png" alt="" class="maps">
             </label>
-            <input type="text">
+            <input type="text" class="text1">
         </div>
 </div>
 
