--- a/index.html
+++ b/index.html
@@ -54,11 +54,17 @@
 </div>
 
     </div>
-    
+
 
 <div class="anuncios">
 
+<div class="bloco1"></div>
+<div class="bloco2"></div>
+<div class="bloco3"></div>
+<div class="bloco4"></div>
+
 </div>
+
 
 
 
