--- a/index.html
+++ b/index.html
@@ -58,10 +58,18 @@
 
 <div class="anuncios">
 
-<div class="bloco1"></div>
-<div class="bloco2"></div>
-<div class="bloco3"></div>
-<div class="bloco4"></div>
+<div class="bloco1">
+
+</div>
+<div class="bloco2">
+
+</div>
+<div class="bloco3">
+
+</div>
+<div class="bloco4">
+    
+</div>
 
 </div>
 
