--- a/index.html
+++ b/index.html
@@ -74,7 +74,10 @@
 </div>
 
 <div class="chats">
-    
+    <img src="./img/🦆 icon _Comment_.png" alt="">
+    <img src="./img/🦆 icon _Line Horizontal 3_.png" alt="">
+    <img src="./img/🦆 icon _Home_.png" alt="">
+    <img src="./img/🦆 icon _Settings_.png" alt="">
 </div>
 
 
