--- a/index.html
+++ b/index.html
@@ -74,11 +74,16 @@
 </div>
 
 <div class="chats">
+
+    <div class="conjunto">
     <img src="./img/🦆 icon _Comment_.png" alt="">
     <img src="./img/🦆 icon _Line Horizontal 3_.png" alt="">
     <img src="./img/🦆 icon _Home_.png" alt="">
     <img src="./img/🦆 icon _Settings_.png" alt="">
 </div>
+
+</div>
+
 
 
 
