--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
 
 <div class="chats">
 
-    <div class="conjunto">
-    <img src="./img/🦆 icon _Comment_.png" alt="">
-    <img src="./img/🦆 icon _Line Horizontal 3_.png" alt="">
-    <img src="./img/🦆 icon _Home_.png" alt="">
-    <img src="./img/🦆 icon _Settings_.png" alt="">
-</div>
+    
+    <img src="./img/🦆 icon _Comment_.png" alt="" class="coment">
+    <img src="./img/🦆 icon _Line Horizontal 3_.png" alt="" class="3linha">
+    <img src="./img/🦆 icon _Home_.png" alt="" class="casa">
+    <img src="./img/🦆 icon _Settings_.png" alt="" class="config">
+
 
 </div>
 
