--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     
     <img src="./img/🦆 icon _Comment_.png" alt="" class="coment">
-    <img src="./img/🦆 icon _Line Horizontal 3_.png" alt="" class="3linha">
+    <img src="./img/🦆 icon _Line Horizontal 3_.png" alt="" class="linhas">
     <img src="./img/🦆 icon _Home_.png" alt="" class="casa">
     <img src="./img/🦆 icon _Settings_.png" alt="" class="config">
 
