--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@
 
 </div>
 
+<div class="perfil">
+   <label for=""> <img src="./img/Group 1.png" alt="" class="usuario"></label>
+
+</div>
+
 
 
 
