--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
 
 <div class="perfil">
    <label for=""> <img src="./img/Group 1.png" alt="" class="usuario"></label>
+   <input type="text" class="text3">
 
 </div>
 
