--- a/index.html
+++ b/index.html
@@ -90,7 +90,11 @@
 
 </div>
 
-<div class="blocochat"></div>
+<div class="blocochat">
+    <img src="img/chat1.png" alt="">
+    <img src="img/chat2.png" alt="">
+    <img src="img/chat1.png" alt="">
+</div>
 
 
 
