--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
 </div>
 
 <div class="blocochat">
-    <img src="img/chat1.png" alt="">
-    <img src="img/chat2.png" alt="">
-    <img src="img/chat1.png" alt="">
+    <img src="img/chat1.png" alt="" class="chat1">
+    <img src="img/chat2.png" alt="" class="chat2">
+    <img src="img/chat1.png" alt="" class="chat3">
 </div>
 
 
