--- a/index.html
+++ b/index.html
@@ -96,6 +96,12 @@
     <img src="img/chat1.png" alt="" class="chat3">
 </div>
 
+<div class="enviar">
+    <label for=""><img src="img/Edit.png" alt=""></label>
+    <input type="text" class="text4">
+    <img src="img/Sent.png" alt="">
+</div>
+
 
 
 
