--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
 </div>
 
 <div class="enviar">
-    <label for=""><img src="img/Edit.png" alt=""></label>
+    <label for=""><img src="img/Edit.png" alt="" class="edit"></label>
     <input type="text" class="text4">
-    <img src="img/Sent.png" alt="">
+    <img src="img/Sent.png" alt="" class="sent">
 </div>
 
 
